# backtesting-engine-cpp

./: .gitignore  CMakeLists.txt  CONVENTIONS.md  LICENSE.MD  readme.md  run.sh  sonar-project.properties
.env/: demo.env
.github/workflows/: sonarcloud.yml  xccov-to-sonarqube-generic.sh
.prototype/include/: Application.h
.prototype/include/Models/: PriceRecord.h
.prototype/include/Strategies/: IStrategy.h  IStrategyFactory.h  RandomStrategy.h
.prototype/src/Strategies/: EnvironmentStrategyFactory.cpp
.prototype/src/Utilities/: Utils.cpp
TestResult/: Info.plist
TestResult/Data/: data.0~08ZYzHT-qGyioWFj-FJ6ucoowG56pk8Cln1zLV-7WSp0uZqiHbrBzstwcAgC5XkDoBppd8DHE33EfSUKofqnqA==  data.0~56nexY5nKQT-eLQbwbToybkwtrXFv04rWxun6RrBWP3tSFbdKcdMTeBUFJeQwKKJJO62wyPxlgQgIxJKEKbhQw==  data.0~FDE9jjwcKBroT7YPgN_isimlPLP2saK_9jWSiFkHgKXtA4UHUmk-Ti_TZ3hoCtXrP-xeQDlWuYz2uBEaUHzz4g==  data.0~MAzPpDOFKg6SSEechGkIj58EfohQQnTDw77quyP3Ij2c5OEE5alCx3sh-3HoQCiUgTUyjBto5rRh5umLYq0ysw==  data.0~Wmt1I5PTTgLSYAJ6VQ_Y6iADw9xw8_nEu-c3D7xlZzsU5O6-djWBypJy3dCmyhpB1o_FGAdu7znWOgncPrEzmQ==  data.0~_GQ--aWjKURGZaCfp77NUZSrSdsB3ZrYeNbo_0HNsQFgpndoB9aNcHbewv89_XHIzJKC96qEUxmSeJu64hqzxg==  data.0~d-BVsUx4bJpHyK60Qu4TYBCltFYS4yQ_fHnjDjW8wD71UfEmcfm9EhcZCKtsETJbTx-kJL0fKfXyITQs58uYLA==  data.0~ee1HC5t2SR5Yx09MkKr9GrYpeMC5FgDAzjren-Dqk3nXTrOQ9sE3PN8ahlr8ST4Gb-KyLfVdRLqhA4T4jiletA==  data.0~gYq_wpIfFbyrMKVFT0FvgqGvypqrtkN2XwOKVFPvsFcC17CnwCs4LPygUuxRHdKIm3GOrJTMTl_gak7Lg24cLA==  data.0~h2_WIXgXKDJjCf4OcSjFy-CoRUm2NVCD8NoR66LBRdWE2F9rThLBY-ppoSCVp2EBZRsg6Nu45IHsR9MbZh9f6w==  data.0~hfKQOKU9ZC7o-xFnBrN1HNuZYEM-vAIGCpBKs7TlWBt9au-qIkHIgMhJhUz4Y0ugzhySqrsOwnDP50RIo_xbgg==  data.0~kfEhTpj7XgjuD-qHSVR1EiDE1XINNVk0zF1WUrg5-4uLdURCp7kKD6_qQcLIAci9jCql7eONVlrjb8bJkdFhVQ==  data.0~tMOd2s_tewxqW9Lp1YIgZjBX0mROE-QcY0wGNy9bpKOKACila7sZ159XjP_z3O6b1Y4q6zOrQoiw9yZxDlNQeA==  data.0~ugzDYazvWc1KKW2w77Q_4_IpeePfls9oamx3uarW414Rfji7VYJ6UDUxqjRIxwO4h2GEmzU9gSGCf7lVDUA7Nw==  data.0~x5HPLMUmkTOEuYzfiUIMzNZqUlTZNst7_hwPJp_eUjXyO6TiSMOMwxZtfdFfttBKLEY2M3fmLBl0-QPZ5Ge-Fg==  data.0~yjBhS4Tox6PjnDlZ5Xqir-5zd32Z5olGHi3nQVcJt1tJm4HIgkYmoWzeFqIZAQXKunm0twczhF_NouCaAeGX0w==  refs.0~08ZYzHT-qGyioWFj-FJ6ucoowG56pk8Cln1zLV-7WSp0uZqiHbrBzstwcAgC5XkDoBppd8DHE33EfSUKofqnqA==  refs.0~56nexY5nKQT-eLQbwbToybkwtrXFv04rWxun6RrBWP3tSFbdKcdMTeBUFJeQwKKJJO62wyPxlgQgIxJKEKbhQw==  refs.0~MAzPpDOFKg6SSEechGkIj58EfohQQnTDw77quyP3Ij2c5OEE5alCx3sh-3HoQCiUgTUyjBto5rRh5umLYq0ysw==  refs.0~Wmt1I5PTTgLSYAJ6VQ_Y6iADw9xw8_nEu-c3D7xlZzsU5O6-djWBypJy3dCmyhpB1o_FGAdu7znWOgncPrEzmQ==  refs.0~hhrwuvfbSxVg7OwrQNlrzUQwFXbT0M7BN_jS84Ei_QdXTESZO7eNxYbc4C-Mjv3IcZ_NLCuXNueKNWRo1YO0og==  refs.0~ugzDYazvWc1KKW2w77Q_4_IpeePfls9oamx3uarW414Rfji7VYJ6UDUxqjRIxwO4h2GEmzU9gSGCf7lVDUA7Nw==  refs.0~yjBhS4Tox6PjnDlZ5Xqir-5zd32Z5olGHi3nQVcJt1tJm4HIgkYmoWzeFqIZAQXKunm0twczhF_NouCaAeGX0w==
_prototype/include/: Account.h  CSVStream.h  Utils.h
_prototype/include/Strategies/: EnvironmentStrategyFactory.h  Strategies.h
_prototype/src/: Application.cpp  CSVParser.cpp  Program.cpp
_prototype/src/FileManagement/: CSVStream.cpp
_prototype/src/Models/: PriceRecord.cpp
_prototype/src/Strategies/: Strategies.cpp
backtesting-engine-cpp.xcodeproj/: project.pbxproj
backtesting-engine-cpp.xcodeproj/project.xcworkspace/xcuserdata/ryan.xcuserdatad/: UserInterfaceState.xcuserstate
backtesting-engine-cpp.xcodeproj/xcshareddata/xcschemes/: source.xcscheme  tests.xcscheme
include/: Account.h  Application.h  CSVParser.h  CSVStream.h  Strategy.h  Utils.h
include/Models/: OhlcObject.h  PriceRecord.h
include/Strategies/: RandomStrategy.h  SimpleMovingAverageStrategy.h
scripts/: build.sh  clean.sh  environment.sh  run.sh  test.sh
source/: Application.cpp  ConfigManager.cpp  ServiceA.cpp  main.cpp  main.hpp
source/include/: Application.hpp  ConfigManager.hpp  ServiceA.hpp
source/tests/: main_test.cpp
src/: Account.cpp  Application.cpp  program.cpp
src/FileManagement/: CSVStream.cpp  PriceRecord.cpp
src/Models/: PriceRecord.cpp
src/Strategies/: RandomStrategy.cpp  SimpleMovingAverageStrategy.cpp
src/Utilities/: Utils.cpp
tests/: AccountTest.cpp  PriceRecordTest.cpp  RandomStrategyTest.cpp  tests.mm
(+2 files in other folders)
